# cookiecutter-pypackage-pbr

./: cookiecutter.json
{{cookiecutter.directory_name}}/: Makefile  setup.cfg
