[metadata]
name = {{cookiecutter.package_name}}
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

summary = {{cookiecutter.summary}}
description-file =
    README.md
description-content-type = text/markdown
license = {{cookiecutter.license}}
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}

[tool:pytest]
testpaths = tests

[extras]
testing=
    pytest
